# RetroPlug

./: .gitattributes  .gitignore  LICENSE  README.md  RetroPlug.RPP  RetroPlug.code-workspace  RetroPlug.sln  appveyor.yml  build-linux.sh  build-web.sh  build.sh  clean-linux.sh  clean-web.sh  config.lua  configure-mac.sh  configure.sh  deploy.bat  iplug2.lua  nginx.sh  premake5.lua  project.lua  web.sh
.devcontainer/: Dockerfile  devcontainer.json
Core/: gb.c
RetroPlug.xcworkspace/: contents.xcworkspacedata
ci/: dep.7z.enc
common/: common.hpp
compiler/: main.cpp
config/: RetroPlug-ios.xcconfig  RetroPlug-mac.xcconfig  RetroPlug-web.mk  RetroPlug-win.props  common-win.props  config.h  version.h
installer/: RetroPlug.iss  RetroPlug.pkgproj  known-issues.txt  license.rtf  readme-osx.rtf  readme-win.rtf
liblsdj/: channel.h  compression.c  groove.h  instrument.c  instrument.h  instrument_noise.h  instrument_wave.h  phrase.c  project.c  sav.c  synth.h  vio.c
lsdj_mono/: main.cpp
lsdj_wavetable_import/: wavetable_importer.cpp  wavetable_importer.hpp
lsdsng_export/: CMakeLists.txt  exporter.hpp  main.cpp
premake/: projects.lua  util.lua
projects/: RetroPlug-aax.vcxproj  RetroPlug-aax.vcxproj.filters  RetroPlug-app.vcxproj  RetroPlug-app.vcxproj.filters  RetroPlug-scriptc.vcxproj  RetroPlug-scriptc.vcxproj.filters  RetroPlug-vst2.vcxproj  RetroPlug-vst2.vcxproj.filters  RetroPlug-vst3.vcxproj  RetroPlug-vst3.vcxproj.filters  RetroPlug-wam-controller.mk  RetroPlug-wam-processor.mk
resources/: IPlugViewController.xib  RetroPlug-AAX-Info.plist  config.lua  (+14 more)
(+825 files in other folders)
